--- a/ps5/minesweeper/index.html
+++ b/ps5/minesweeper/index.html
@@ -1,3 +1,9 @@
+<!--
+    * It's one of the main games for the YouTube Video. As of a result, it will contain cleaner code.
+
+    * Please open the game, alongside the Developer Console for the best debugging experience.
+    * FrontendTitan - 2024 
+-->
 <!DOCTYPE html>
 <html lang="en">
 
