--- a/ps5/rock-paper-scissors/index.html
+++ b/ps5/rock-paper-scissors/index.html
@@ -47,7 +47,7 @@
             top: 10px;
             left: 10px;
             text-decoration: none;
-            color: #000;
+            color: white;
         }
 
         a:nth-child(2) {
