--- a/ps5/space-invaders/index.html
+++ b/ps5/space-invaders/index.html
@@ -62,31 +62,31 @@
             padding: 10px 20px;
         }
 
-        a {
+        .address-links {
             position: absolute;
             top: 10px;
             left: 10px;
             text-decoration: none;
-            color: #000;
+            color: white;
         }
 
-        a:nth-child(2) {
+        .address-links:nth-child(2) {
             top: 30px;
         }
 
-        a:hover {
+        .address-links:hover {
             text-decoration: underline;
         }
 
-        a:active {
+        .address-links:active {
             color: #f00;
         }
     </style>
 </head>
 
 <body>
-    <a href="/">Back To Home</a>
-    <a href="/ps5">Game Picker</a>
+    <a class="address-links" href=" /">Back To Home</a>
+    <a class="address-links" href=" /ps5">Game Picker</a>
     <div id="score">Score: 0</div>
     <div id="best">Best: 0</div>
 
@@ -102,15 +102,36 @@
         <p style='text-align: center;'>Use Cursor To Control Easier & Click To Shoot</p>
     </div>
 
-    <script>
+    <div id="popup"
+        style="display: none; position: fixed; width: 100%; height: 100%; top: 0; left: 0; background: rgb(0, 0, 0); color: white; text-align: center; padding-top: 20%;">
+        <h1>Your browser window is too small!</h1>
+        <p>Please resize your browser window to at least 543x700.</p>
+
+        <a href="/">Back To Home</a>
+        <a href="/ps5">Game Picker</a>
+    </div>
+
+    <script defer>
+        function checkWindowSize() {
+            const popup = document.getElementById('popup')
+
+            if (window.innerWidth < 543 || window.innerHeight < 700) {
+                popup.style.display = 'block'
+            } else {
+                popup.style.display = 'none'
+            }
+        }
+
+        // Check window size on load
+        checkWindowSize()
+
+        // Check window size on resize
+        window.addEventListener('resize', checkWindowSize)
+
         let canvas = document.getElementById('gameCanvas')
         let ctx = canvas.getContext('2d')
 
         window.addEventListener('resize', resizeCanvas)
-
-        let score = 0
-        let bestScore = localStorage.getItem('bestScore') || 0 // Retrieve the best score from local storage
-        let gameInterval
 
         let player = {
             x: canvas.width / 2,
@@ -119,6 +140,10 @@
             height: 20,
             dx: 2
         }
+
+        let score = 0
+        let bestScore = localStorage.getItem('bestScore') || 0 // Retrieve the best score from local storage
+        let gameInterval
 
         let bullets = []
         let enemies = []
@@ -399,13 +424,9 @@
          * Resizes the canvas and adjusts the positions of the player and enemies when the window is resized.
          */
         function resizeCanvas() {
-            if (window.innerHeight > 800) {
-                canvas.height = window.innerHeight - 300
-            }
+            canvas.height = window.innerHeight - 250
+            canvas.width = 500
 
-            if (window.innerWidth > 400) {
-                canvas.width = window.innerWidth - 100
-            }
 
             // Adjust player's position when window is resized
             player.y = canvas.height - player.height
@@ -439,7 +460,9 @@
         }
 
         // Retrieve the best score from local storage and update the display
-        document.getElementById('best').innerText = 'Best: ' + bestScore;
+        document.getElementById('best').innerText = 'Best: ' + bestScore
+
+        resizeCanvas()
     </script>
 </body>
 
